rootskel (1.10) UNRELEASED; urgency=low

  * Colin Watson
    - Do the register-module i8042 and atkbd for powerpc/chrp* and
      powerpc/prep here rather than in hw-detect; it's too confusing having
      this spread out over two completely different places.

 -- Colin Watson <cjwatson@debian.org>  Sat,  4 Dec 2004 17:59:06 +0000

rootskel (1.09) unstable; urgency=high

  * Bdale Garbee
    - hppa 2.6 kernels need do_initrd = Yes

 -- Bdale Garbee <bdale@gag.com>  Thu, 11 Nov 2004 23:10:01 -0700

rootskel (1.08) unstable; urgency=high

  * Bdale Garbee
    - give hppa a 2.6 kernel version default

 -- Bdale Garbee <bdale@gag.com>  Wed, 10 Nov 2004 16:17:30 -0700

rootskel (1.07) unstable; urgency=high

  * Joey Hess
    - Revert change in 1.06, it broke all serial console installs
      (including English) using non-linux terminals. Reopens: #263137

 -- Joey Hess <joeyh@debian.org>  Sun, 17 Oct 2004 16:31:33 -0400

rootskel (1.06) unstable; urgency=low

  * Kenshi Muto
    - Enable UTF-8 on serial console. (closes: #263137)
      This change solves lock up of non-English installation.

 -- Kenshi Muto <kmuto@debian.org>  Sun, 17 Oct 2004 15:20:38 +0900

rootskel (1.05) unstable; urgency=low

  * Stephen R. Marenka
    - Only check for 2.2 kernel serial console for VMEs,
      workaround for #269077.

 -- Joey Hess <joeyh@debian.org>  Wed,  6 Oct 2004 13:24:40 -0400

rootskel (1.04) unstable; urgency=low

  * Joey Hess
    - Test for debian-installer/framebuffer in S35framebuffer-linux to allow
      disabling of the use of the framebuffer with bterm on arches that have
      the framebuffer built in. Closes: #273378

 -- Joey Hess <joeyh@debian.org>  Sun,  3 Oct 2004 13:34:51 -0400

rootskel (1.03) unstable; urgency=low

  * Jim Lieb
    - Add 2.6 kernels to ia64 build
  * Martin Michlmayr
    - Load framebuffer modules for sb1-swarm-bn on mips/mipsel.
  * Sven Luther
    - Load framebuffer modules for tgafb on alpha.
