@@ -1,0 +1,10 @@
+kver=`uname -r | cut -d. -f1,2` # Kernel version (e.g. 2.6)
+
+if [ "$kver" = 2.6 ]; then
+	echo "Loading AT keyboard modules..."
+	modprobe -q i8042 >/dev/null 2>&1 || true
+	register-module i8042
+	modprobe -q atkbd >/dev/null 2>&1 || true
+	register-module atkbd
+	register-module psmouse
+fi
