@@ -4,6 +4,10 @@ rootskel (1.10) UNRELEASED; urgency=low
     - Do the register-module i8042 and atkbd for powerpc/chrp* and
       powerpc/prep here rather than in hw-detect; it's too confusing having
       this spread out over two completely different places.
+  * Joey Hess
+    - Add ps2 keyoard module registration code for ia64 with the 2.6 kernel
+      which has it modular. Also threw in register-module psmouse there.
+      Closes: #283983
 
  -- Colin Watson <cjwatson@debian.org>  Sat,  4 Dec 2004 17:59:06 +0000
 
